--- a/src/routes/_global.css
+++ b/src/routes/_global.css
@@ -1,3 +1,9 @@
+@import url('https://fonts.googleapis.com/css?family=Lato&display=swap');
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+a {
+	@apply text-blue-800 dark:text-blue-300;
+}
