--- a/src/routes/_global.css
+++ b/src/routes/_global.css
@@ -5,5 +5,6 @@
 @tailwind utilities;
 
 a {
-	@apply text-blue-800 dark:text-blue-300;
+	@apply text-blue-800 hover:text-blue-700 focus:text-blue-700
+		dark:text-blue-300 dark:hover:text-blue-200 dark:focus:text-blue-200;
 }
